--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <!-- First Javascript -->
     <script>
-        alert('Hello World');
+        // alert('Hello World');
+
+        document.write("Hello World");
     </script>
 
 </body>
