console log function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <script>
         // alert('Hello World');
 
-        document.write("Hello World");
+        // document.write("Hello World");
+
+        console.log("Hello World");
     </script>
 
 </body>
