--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
         // document.write("Hello World");
 
-        console.log("Hello World");
+        document.write("<h1 style='color:red'>Hello World</h1>");
+
+        // console.log("Hello World");
+
+        
+
     </script>
 
 </body>
