how to add js in html

--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
+
+
+
 </head>
 <body>
     
 
-    <!-- First Javascript -->
-    <script>
-        // alert('Hello World');
+  <!-- Inline Js -->
+    <button type="button" onclick="alert('Hello')">Click </button>
 
-        // document.write("Hello World");
 
-        document.write("<h1 style='color:red'>Hello World</h1>");
 
-        // console.log("Hello World");
+    <!-- Internal Js -->
+    <!-- <script>
+        window.alert("Hello Internal Js");
+    </script> -->
 
-        
-
-    </script>
+    <script src="external.js"></script>
 
 </body>
 </html>
