Keyword & Data Type in js

--- a/index.html
+++ b/index.html
@@ -11,17 +11,31 @@
 <body>
     
 
-  <!-- Inline Js -->
-    <button type="button" onclick="alert('Hello')">Click </button>
+    <!-- Keyword in js -->
+    <!-- 
+        break, case, catch, continue, debugger, default, delete, do, if, else, finally, for,
+        function, in, instanceof, new, return, switch, this, throw, try, typeof, var, void, while, with
+    -->
+
+
+    <!-- Data Type -->
+    <script>
+
+        var name = "Robin" // String Data Type
+        var year = "2023" // Number Data Type
+        var isMale = true // Boolean Data Type
+
+       console.log(typeof name);
+
+       console.log(typeof year);
+
+       console.log(typeof parseFloat(year));
 
 
 
-    <!-- Internal Js -->
-    <!-- <script>
-        window.alert("Hello Internal Js");
-    </script> -->
+    </script>
+  
 
-    <script src="external.js"></script>
 
 </body>
 </html>
