--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,34 +9,32 @@
 
 
 </head>
+
 <body>
-    
 
-    <!-- Keyword in js -->
-    <!-- 
-        break, case, catch, continue, debugger, default, delete, do, if, else, finally, for,
-        function, in, instanceof, new, return, switch, this, throw, try, typeof, var, void, while, with
-    -->
-
-
-    <!-- Data Type -->
     <script>
 
-        var name = "Robin" // String Data Type
-        var year = "2023" // Number Data Type
-        var isMale = true // Boolean Data Type
 
-       console.log(typeof name);
+        // variable in js
 
-       console.log(typeof year);
+        var fname, lname;
 
-       console.log(typeof parseFloat(year));
+        fname = "Robin";
+        lname = "Hossain";
+
+        console.log(fname + ' ' + lname);
+
+        var name = "Robin";
+
+        name = "Hossain";
+
+        console.log(name);
 
 
 
     </script>
-  
 
 
 </body>
+
 </html>
